--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <%= render 'shared/site_navbar' %>
 
-    <div class="container-fluid" id="content-container">
+    <div class="container-fluid" id="content_container">
       <div class="row">
       <%= yield %>
       </div>
