--- a/app/views/mosaics/index.html.erb
+++ b/app/views/mosaics/index.html.erb
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <%= link_to 'Create a new PixelPic', images_path, class: "btn btn-primary" %>
+        <%= link_to 'Create a new PixelPic', images_path, class: "btn btn-primary", id: "btn_step_3" %>
       </div>
     </div>
   </div>
