--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,12 +35,8 @@ body {
 
   }
 
-  #content-container {
+  #content_container {
     padding-top: 100px;
-    
-    h1, h2, h3, h4 {
-      // color: #dd4814;
-    }
     
     #pages_index {
       #hero-banner {
@@ -124,7 +120,8 @@ body {
             width: 100px;
             text-align: center;
             background: white;
-            border: 5px solid white;
+            border: 4px solid #f9ccbc;
+            margin: 1px;
 
             .uploaded_image {
               max-width: 100%;
@@ -132,7 +129,8 @@ body {
             }
           }
           .image_selected {
-            border: 5px solid blue;
+            border: 4px solid #bf3e11;
+            margin: 1px;
           }
         }
       }
@@ -151,8 +149,9 @@ body {
               height: 100px;
               width: 100px;
               text-align: center;
-              background: grey;
-              border: 5px solid white;
+              background: white;
+              border: 3px solid #f9ccbc;
+              margin: 2px;
               display: none;
 
               .fb_image {
@@ -164,7 +163,7 @@ body {
               display: block;
             }
             .image_selected {
-              border: 5px solid blue;
+              border: 3px solid #bf3e11;
             }
           }
         }
@@ -191,6 +190,45 @@ body {
       }
     }
 
+    #mosaics_new {
+      #target_select {
+        #target_images_inner {
+          max-height: 500px;
+          overflow: scroll;
+
+          .target_image_container {
+            float: left;
+            height: 100px;
+            width: 100px;
+            text-align: center;
+            background: white;
+            border: 4px solid #f9ccbc;
+            margin: 1px;
+
+            .target_image {
+              max-width: 100%;
+              max-height: 100%;
+            }
+          }
+          .image_selected {
+            border: 4px solid #bf3e11;
+            margin: 1px;
+          }
+        }
+      }
+    }
+
+    #mosaics_show {
+      #small_image {
+        padding: 20px;
+        max-height: 500px;
+        img {
+          max-width: 100%;
+          max-height: 400px;
+          border: 2px solid #dd4814;
+        }
+      }
+    }
   }
 
   footer {
