--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -1,13 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @mosaic.name %>
-</p>
-
-<div id="mosaic_container">
-  <%= image_tag(@mosaic.path_small, id: "zoom_01", data: {"zoom-image" => @mosaic.path}) %>
+<div class="container" id="mosaics_show">
+  <div class="row">
+    <div class="panel panel-default" id="">
+      <div class="panel-heading text-center">
+        <h2 class="text-primary"><%= @mosaic.name %></h2>
+        <h3 class="text-muted"><em>Hover over the image to zoom in</em></h3>
+      </div>
+      <div class="panel-body" id="">
+        <div class="col-sm-12 text-center" id="small_image">
+          <%= image_tag(@mosaic.path_small, id: "zoom_01", data: {"zoom-image" => @mosaic.path}) %>
+          <br>
+          <br>
+          <%= link_to 'Edit', edit_mosaic_path(@mosaic), class: "btn btn-default" %>
+          <%= link_to 'Destroy', @mosaic, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %>
+        </div>        
+      </div>
+      <div class="panel-footer text-right">
+        <%= link_to 'Back to my PixelPics', mosaics_path, class: "btn btn-primary" %>
+      </div>
+    </div>
+  </div>
 </div>
-
-<%= link_to 'Edit', edit_mosaic_path(@mosaic) %> |
-<%= link_to 'Back', mosaics_path %>
