--- a/app/views/shared/_site_footer.html.erb
+++ b/app/views/shared/_site_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
-  <div class="container-fluid" id="footer">
+<footer id="footer">
+  <div class="container-fluid" id="contact-us">
     <div class="row">
       <div class="col-md-4 text-center">
         <h4>Want to get in touch?</h4>
