--- a/app/views/shared/_site_navbar.html.erb
+++ b/app/views/shared/_site_navbar.html.erb
@@ -21,7 +21,8 @@
           <ul class="dropdown-menu">
             <li><a href="/#how-it-works">How it Works</a></li>
             <li><a href="/#gallery">Gallery</a></li>
-            <li><a href="/#">Products</a></li>
+            <li><%= link_to 'Examples', examples_path %></li>
+            <li><a href="/#products">Products</a></li>
             <li><a href="/#contact-us">Contact Us</a></li>
           </ul>
         </li>
