--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,46 +17,115 @@
 
 
 
-body {
+html, body {
   background-color: #f9ccbc;
-  // background-image: url("background.jpg");
-  // background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 
-  .navbar {
-    height: 50px;
-    box-shadow: 0 1px 10px 0px black;
+  #test {
+    min-height: 100%;
+    position: relative;
 
-    #nav_logo {
-      width: 200px;
-      position: relative;
-      top: 20px;
-      border: 1px solid #bf3e11;
-      border-radius: 10px;
-      box-shadow: 0 1px 5px 0px black;
-    }
+    .navbar {
+      height: 50px;
+      box-shadow: 0 1px 10px 0px black;
 
-  }
-
-  #content_container {
-    padding-top: 100px;
-    
-    #pages_index {
-      #how-it-works:before, #gallery:before, #products:before, #contact-us:before { 
-        display: block; 
-        content: " "; 
-        margin-top: -70px; 
-        height: 70px; 
-        visibility: hidden; 
+      #nav_logo {
+        width: 200px;
+        position: relative;
+        top: 20px;
+        border: 1px solid #bf3e11;
+        border-radius: 10px;
+        box-shadow: 0 1px 5px 0px black;
       }
 
-      #hero-banner {
-        img{
-          width: 100%;
+    }
+
+    #content_container {
+      padding-top: 100px;
+      padding-bottom: 350px;
+      
+      #pages_index {
+        #how-it-works:before, #gallery:before, #products:before, #contact-us:before { 
+          display: block; 
+          content: " "; 
+          margin-top: -70px; 
+          height: 70px; 
+          visibility: hidden; 
+        }
+
+        #hero-banner {
+          img{
+            width: 100%;
+          }
+        }
+
+        #about {
+          #small_image {
+            padding: 20px;
+            max-height: 500px;
+            img {
+              max-width: 100%;
+              max-height: 400px;
+              border: 2px solid #dd4814;
+            }
+          }
+        }
+
+        #how-it-works {
+
+        }
+
+        #gallery {
+          .carousel {
+            .carousel-indicators {
+              li {
+                background-color: #669966;
+                border: 1px solid black;
+              }
+              .active {
+                background-color: #FF7600;
+              }
+            }
+
+            .carousel-inner {
+              .item {
+                text-align: center;
+                height: 300px;
+                img {
+                  margin: 0 auto;
+                  max-width: 400px;
+                  max-height: 300px;
+
+                }
+                .carousel-caption {
+                  margin-bottom: -55px;
+                }
+                .carousel-caption h3{
+                  background-color: #dd4814;
+                  color: white;
+                  border-radius: 5px;
+                }
+              }
+            }
+
+            .carousel-control {
+              .fa-chevron-left, .fa-chevron-right {
+                position: absolute;
+                top: 50%;
+              }
+            }
+          }
+        }
+
+        #contact-us {
+
         }
       }
 
-      #about {
-        #small_image {
+      #pages_examples {
+        .example_container {
           padding: 20px;
           max-height: 500px;
           img {
@@ -67,229 +136,173 @@ body {
         }
       }
 
-      #how-it-works {
+      #images_index {
+        #add_images {
+          #new_image {
+            #btn-pc {
+              padding: 0;
+              width: 200px;
 
-      }
-
-      #gallery {
-        .carousel {
-          .carousel-indicators {
-            li {
-              background-color: #669966;
-              border: 1px solid black;
-            }
-            .active {
-              background-color: #FF7600;
-            }
-          }
-
-          .carousel-inner {
-            .item {
-              text-align: center;
-              height: 300px;
-              img {
-                margin: 0 auto;
-                max-width: 400px;
-                max-height: 300px;
-
+              label {
+                height: 100%;
+                width: 100%;
+                margin: 0;
+                font-size: 25px;
               }
-              .carousel-caption {
-                margin-bottom: -55px;
-              }
-              .carousel-caption h3{
-                background-color: #dd4814;
-                color: white;
-                border-radius: 5px;
+
+              #image_file {
+                visibility: hidden;
+                height: 0;
+                width: 0;
               }
             }
           }
-
-          .carousel-control {
-            .fa-chevron-left, .fa-chevron-right {
-              position: absolute;
-              top: 50%;
-            }
-          }
-        }
-      }
-
-      #contact-us {
-
-      }
-    }
-
-    #pages_examples {
-      .example_container {
-        padding: 20px;
-        max-height: 500px;
-        img {
-          max-width: 100%;
-          max-height: 400px;
-          border: 2px solid #dd4814;
-        }
-      }
-    }
-
-    #images_index {
-      #add_images {
-        #new_image {
-          #btn-pc {
+          #fb-btn {
             padding: 0;
+            font-size: 25px;
             width: 200px;
-
-            label {
-              height: 100%;
-              width: 100%;
-              margin: 0;
-              font-size: 25px;
-            }
-
-            #image_file {
-              visibility: hidden;
-              height: 0;
-              width: 0;
-            }
           }
         }
-        #fb-btn {
-          padding: 0;
-          font-size: 25px;
-          width: 200px;
-        }
-      }
 
-      #uploaded_images {
+        #uploaded_images {
 
-        #uploaded_images_inner {
-          max-height: 500px;
-          overflow: scroll;
-
-          .uploaded_image_container {
-            float: left;
-            height: 100px;
-            width: 100px;
-            text-align: center;
-            background: white;
-            border: 4px solid #f9ccbc;
-            margin: 1px;
-
-            .uploaded_image {
-              max-width: 100%;
-              max-height: 100%;
-            }
-          }
-          .image_selected {
-            border: 4px solid #bf3e11;
-            margin: 1px;
-          }
-        }
-      }
-
-      #fb-modal {
-        .modal-header {}
-        .modal-body {
-          #fb_album_select {
-          }
-          #fb_albums {
+          #uploaded_images_inner {
             max-height: 500px;
             overflow: scroll;
 
-            .fb_image_container {
+            .uploaded_image_container {
               float: left;
               height: 100px;
               width: 100px;
               text-align: center;
               background: white;
-              border: 3px solid #f9ccbc;
-              margin: 2px;
-              display: none;
+              border: 4px solid #f9ccbc;
+              margin: 1px;
 
-              .fb_image {
+              .uploaded_image {
                 max-width: 100%;
                 max-height: 100%;
               }
             }
-            .album_active {
-              display: block;
+            .image_selected {
+              border: 4px solid #bf3e11;
+              margin: 1px;
+            }
+          }
+        }
+
+        #fb-modal {
+          .modal-header {}
+          .modal-body {
+            #fb_album_select {
+            }
+            #fb_albums {
+              max-height: 500px;
+              overflow: scroll;
+
+              .fb_image_container {
+                float: left;
+                height: 100px;
+                width: 100px;
+                text-align: center;
+                background: white;
+                border: 3px solid #f9ccbc;
+                margin: 2px;
+                display: none;
+
+                .fb_image {
+                  max-width: 100%;
+                  max-height: 100%;
+                }
+              }
+              .album_active {
+                display: block;
+              }
+              .image_selected {
+                border: 3px solid #bf3e11;
+              }
+            }
+          }
+          modal-footer {}
+        }
+
+      }
+
+      #mosaics_index {
+        #my_mosaics {
+          .panel-heading {}
+          .panel-body {
+            max-height: 500px;
+            overflow: scroll;
+            
+            .mosaic_container {
+              img {
+                max-width: 200px;
+                border: 1px solid black;
+              }
+            }
+          }
+          .panel-heading {}
+        }
+      }
+
+      #mosaics_new {
+        #target_select {
+          #target_images_inner {
+            max-height: 500px;
+            overflow: scroll;
+
+            .target_image_container {
+              float: left;
+              height: 100px;
+              width: 100px;
+              text-align: center;
+              background: white;
+              border: 4px solid #f9ccbc;
+              margin: 1px;
+
+              .target_image {
+                max-width: 100%;
+                max-height: 100%;
+              }
             }
             .image_selected {
-              border: 3px solid #bf3e11;
+              border: 4px solid #bf3e11;
+              margin: 1px;
             }
           }
         }
-        modal-footer {}
       }
 
-    }
-
-    #mosaics_index {
-      #my_mosaics {
-        .panel-heading {}
-        .panel-body {
+      #mosaics_show {
+        #small_image {
+          padding: 20px;
           max-height: 500px;
-          overflow: scroll;
-          
-          .mosaic_container {
-            img {
-              max-width: 200px;
-              border: 1px solid black;
-            }
-          }
-        }
-        .panel-heading {}
-      }
-    }
-
-    #mosaics_new {
-      #target_select {
-        #target_images_inner {
-          max-height: 500px;
-          overflow: scroll;
-
-          .target_image_container {
-            float: left;
-            height: 100px;
-            width: 100px;
-            text-align: center;
-            background: white;
-            border: 4px solid #f9ccbc;
-            margin: 1px;
-
-            .target_image {
-              max-width: 100%;
-              max-height: 100%;
-            }
-          }
-          .image_selected {
-            border: 4px solid #bf3e11;
-            margin: 1px;
+          img {
+            max-width: 100%;
+            max-height: 400px;
+            border: 2px solid #dd4814;
           }
         }
       }
     }
 
-    #mosaics_show {
-      #small_image {
-        padding: 20px;
-        max-height: 500px;
-        img {
-          max-width: 100%;
-          max-height: 400px;
-          border: 2px solid #dd4814;
-        }
+    footer {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      /*height: 100px;*/
+
+      background-color: #dd4814;
+      color: #eeeeee;
+      .row {
+        padding: 10px;
+      }
+      .btn {
+        margin: 10px;
       }
     }
-  }
 
-  footer {
-    background-color: #dd4814;
-    color: #eeeeee;
-    .row {
-      padding: 10px;
-    }
-    .btn {
-      margin: 10px;
-    }
   }
 
 }
