--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -136,12 +136,12 @@
     </div>
   </div>
 
-  <div class="row" id="products">
+<!--   <div class="row" id="products">
     <div class="panel panel-default">
       <div class="panel-body">
 
       </div>
     </div>
-  </div>
+  </div> -->
 
 </div>
