completed hide/show for step3 and 4 (create), and added default name value if name input was left blank

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
   
   <body>
-    <div id="test">
+    <div id="body_container">
       <%= render 'shared/site_navbar' %>
 
       <div class="container-fluid" id="content_container">
