--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,7 @@ html, body {
   padding: 0;
   height: 100%;
 
-  #test {
+  #body_container {
     min-height: 100%;
     position: relative;
 
@@ -248,6 +248,7 @@ html, body {
 
       #mosaics_new {
         #target_select {
+
           #target_images_inner {
             max-height: 500px;
             overflow: scroll;
@@ -270,6 +271,13 @@ html, body {
               border: 4px solid #bf3e11;
               margin: 1px;
             }
+          }
+        }
+
+        #extra_details {
+
+          &.shown {
+            display: none;
           }
         }
       }
