--- a/app/views/mosaics/new.html.erb
+++ b/app/views/mosaics/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container" id="mosaics_new">
   <div class="row">
+
     <div class="panel panel-default" id="target_select">
       <div class="panel-heading">
         <h2>Step 2: Select your target image</h2>
@@ -14,10 +15,11 @@
         <% end %>
       </div>
       <div class="panel-footer text-right">
-        <h4>Once you have selected your target image, click here to go to the next step <p class="btn btn-success" id="btn_step_3">Go To Step 3</p></h4>
+        <h4>Once you have selected your target image, click here to go to the next step <p class="btn btn-success disabled" id="btn_step_3">Go To Step 3</p></h4>
       </div>
     </div>
-    <div class="panel panel-default" id="extra_details">
+
+    <div class="panel panel-default shown" id="extra_details">
       <div class="panel-heading">
         <h2>Step 3: Extra Details</h2>
         <h4><em class="text-muted">add a name and choose the size of your PixelPic</em></h4>
@@ -34,56 +36,3 @@
     </div>
   </div>
 </div>
-
-
-<!-- <div id="mosaics_container">
-  <div id="mosaic_tabs">
-    <div id="mosaic_tab_pick_tiles" class="tab_selector active">Choose background images</div>
-    <div id="mosaic_tab_pick_target" class="tab_selector">Choose main image</div>
-    <div id="mosaic_tab_show_mosaic" class="tab_selector">Your Pixelpic</div>
-  </div>
-
-  <div id="mosaic_bodies">
-    <%#= form_for(@mosaic) do |f| %>
-      <%#= render "shared/errors", target: @mosaic %>
-      <div id="mosaic_body_pick_tiles"class="body_tab active">
-        <div class="instructions">
-          <h3>Select images for background tiles:</h3>
-          <p>Choose individual pictures by clicking the images below, or... </p>
-          <p id="add_all" class="sudo_link">add all</p>
-          <p id="remove_all" class="sudo_link">remove all</p>
-          <p id="go_to_step_2" class="sudo_link">next</p>
-          
-        </div>
-        
-        <div id="tiles">
-          <%#= select_tag("mosaic[image_ids][]", options_for_select(current_user.images.all.collect{ |img| [img.name, img.id, {"data-img-src" => img.file.url}] }), multiple: true) %>
-        </div>
-      </div>
-      <div id="mosaic_body_pick_target" class="body_tab">
-        <div id="name_input">
-          <%#= f.label :name %>
-          <%#= f.text_field :name, placeholder: "e.g. My Mosaic", required: true %>
-        </div>
-        <div class="actions" id="make_mosaic_button">
-          <p id="go_to_step_3">Make my Pixelpic!</p>
-          <div id="submit_button">
-            <%#= f.submit %>
-          </div>
-          
-        </div>
-        <div class="field">
-          <h3>Select your main image:</h3>
-          <div id="target">
-            <%#= select_tag("mosaic[image_ids][]", options_for_select(current_user.images.all.collect{ |img| [img.name, img.id, {"data-img-src" => img.file.url}] })) %>
-          </div>
-        </div>
-      </div>
-      <div id="mosaic_body_show_mosaic"class="body_tab ">
-        <div id="mosaic_name"></div>
-        <div id="mosaic_show"></div>
-        <div id="mosaic_zoom"></div>
-      </div>
-    <%# end %>
-  </div>
-</div> -->
