bootstrapped user/new and session/new. re-added page-loading animation when mosaic/create is initiated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
 
       <%= render 'shared/site_footer' %>
       <%= render 'shared/email_modal' %>
-      
-    </div>
 
+    </div>
+    <div id="page_load"></div>
   </body>
 </html>
