--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -310,40 +310,27 @@ html, body {
         margin: 10px;
       }
     }
-
   }
 
+  #page_load {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+    url('https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/ajax-loader.gif') 
+    50% 50% 
+    no-repeat;
+  }
+
+  &.loading {
+    overflow: hidden;
+
+      #page_load {
+      display: block;
+    }  
+  }
 }
-
-
-
-
-
-
-
-// /* adding a loading image to the display when the mosaic is being processed*/
-// .modal {
-//   display:    none;
-//   position:   fixed;
-//   z-index:    1000;
-//   top:        0;
-//   left:       0;
-//   height:     100%;
-//   width:      100%;
-//   background: rgba( 255, 255, 255, .8 ) 
-//   url('https://s3-eu-west-1.amazonaws.com/pixelpic/ajax-loader.gif') 
-//   50% 50% 
-//   no-repeat;
-// }
-
-// /* When the body has the loading class, we turn
-// the scrollbar off with overflow:hidden */
-// body.loading {
-//   overflow: hidden;   
-// }
-
-// /* Anytime the body has the loading class, our
-// modal element will be visible */
-// body.loading .modal {
-//   display: block;
-// }
