--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,51 @@
-<h2>Sign up</h2>
+<div class="container" id="sessions_new">
+  <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2>Sign up</h2>
+      </div>
+      <div class="panel-body text-center">
+        <div class="row">
+          <div class="container">
+            <div class="column-sm-12">
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+                <div class="field">
+                  <%= f.label :email %><br />
+                  <%= f.email_field :email, class: "form-control", autofocus: true, placeholder: "email@example.com" %>
+                </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+                <div class="field">
+                  <%= f.label :password %>
+                  <% if @validatable %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, class: "form-control", autocomplete: "off", placeholder: "password" %>
+                </div>
+
+                <div class="field">
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off", placeholder: "password confirmation" %>
+                  <br>
+                </div>
+
+                <div class="actions">
+                  <%= f.submit "Sign up", class: "btn btn-primary" %>
+                </div>
+              <% end %>
+            </div>
+            
+          </div>
+        </div>
+        <div class="row">
+          <br>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
+
+
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  
+</div>
