--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,9 @@ html, body {
         }
 
         #about {
+          #about_text {
+            padding: 50px;
+          }
           #small_image {
             padding: 20px;
             max-height: 500px;
@@ -74,7 +77,12 @@ html, body {
         }
 
         #how-it-works {
-
+          .image_container {
+            padding: 20px;
+            img {
+              max-height: 300px;
+            }
+          }
         }
 
         #gallery {
