--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,8 +3,7 @@
 
   <div class="row" id="hero-banner">
     <div class="panel panel-default">
-      <!-- <img src="https://s3-eu-west-1.amazonaws.com/pixelpic/pixelpic_banner_large.jpg" alt="pixelpic_banner_large"> -->
-      <%= image_tag("logo.jpg") %>
+      <%= image_tag("https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_banner_large.jpg", alt: "pixelpic_banner_large.jpg") %>
     </div>
   </div>
 
@@ -33,7 +32,7 @@
             </div>
           </div>
           <div class="col-md-6 text-center" id="small_image">
-            <%= image_tag("https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_example1_small.jpg", id: "zoom_01", data: {"zoom-image" => "https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_example1_large.jpg"}) %>
+            <%= image_tag("https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_profile_pic_small.jpg", id: "zoom_01", data: {"zoom-image" => "https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_profile_pic_large.jpg"}) %>
           </div>
         </div>
       </div>
