--- a/app/views/shared/_site_navbar.html.erb
+++ b/app/views/shared/_site_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="navbar-header">
       
-      <%= link_to image_tag("logo.jpg",  id: "nav_logo"), root_url %>
+      <%= link_to image_tag("https://s3-eu-west-1.amazonaws.com/pixelpic/Resources/pixelpic_banner_small.jpg", id: "nav_logo"), root_url %>
 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
         <span class="icon-bar"></span>
